--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vue2-filters": "^0.12.0"
+    "vue2-filters": "^0.12.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
