--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.5.1",
     "vue2-filters": "^0.12.0",
     "vuex": "^3.6.2"
