--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue": "^2.6.11",
     "vue-page-transition": "^0.2.2",
     "vue-router": "^3.5.1",
+    "vue-typed-js": "^0.1.2",
+    "vue-typewriter": "^2.2.1",
     "vue2-filters": "^0.12.0",
     "vuex": "^3.6.2"
   },
